apps/support/openwisp/overlays/homelab/openwisp-nginx-command-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwisp-nginx
  namespace: openwisp
spec:
  template:
    spec:
      containers:
        - name: openwisp-nginx
          command:
            - /bin/sh
          args:
            - -c
            - |
              echo "Starting nginx without removing default.conf"
              nginx -g 'daemon off;'
