apps/support/openwisp/overlays/homelab/redis-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
        - name: redis
          command:
            - "redis-server"
            - "/usr/local/etc/redis/redis.conf"
          volumeMounts:
            - name: redis-config
              mountPath: /usr/local/etc/redis
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-config
          configMap:
            name: redis-config
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
