apps/support/openwisp/overlays/homelab/ingress-dashboard.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwisp-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
  - hosts: ["dashboard.support4u.se"]
    secretName: dashboard-tls
  rules:
  - host: dashboard.support4u.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 8000
