apps/support/openwisp/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwisp-dashboard
  namespace: openwisp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openwisp.support4u.se
      secretName: openwisp-dashboard-tls
  rules:
    - host: openwisp.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwisp-dashboard
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwisp-api
  namespace: openwisp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-openwisp.support4u.se
      secretName: openwisp-api-tls
  rules:
    - host: api-openwisp.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwisp-api
                port:
                  number: 8000
---
